==> edegiil/KNU_ioT_2019_Fall/ubinos/kernel/driver/lib_at86rf/src/PAL/SAM3S/Generic/Src/pal_uart.c <==
#include "../../../../../ubiconfig.h"
#include <stdint.h>
#include "../../../Inc/pal.h"
#include "../../../../Include/_pal_config.h"
#include "../Inc/pal_uart.h"

void sio_uart_0_init(uint32_t baud_rate)
{
    uint32_t uart_id;
    //Usart *uart_ptr;
    uart_irq_handler_t irq_handler;
	unsigned int abcdsr;

    /* ID of the PAL_UART0 peripheral. */
    uart_id = ID_USART0;

    /* Pointer to the PAL_UART0 base. */
    //&uart_ptr = USART0;

    /* Interrupt handler for PAL_UART0. */
    irq_handler = uart0_irq_handler;

    /*
     * The RXD0 and TXD0 pins on the PIO A are configured to be
     * controlled by on chip UART peripheral.
     */
 //   PIOA->PIO_ASR = (PIN_UART_0_RXD | PIN_UART_0_TXD);
    abcdsr = PIOA->PIO_ABCDSR[0];
    PIOA->PIO_ABCDSR[0] &= ((~(PIN_UART_0_RXD | PIN_UART_0_TXD))& abcdsr);
    abcdsr = PIOA->PIO_ABCDSR[1];
    PIOA->PIO_ABCDSR[1] &= ((~(PIN_UART_0_RXD | PIN_UART_0_TXD))& abcdsr);

    PIOA->PIO_PDR = (PIN_UART_0_RXD | PIN_UART_0_TXD);


    /* The clock for selected UART channel is enabled. */
    PMC->PMC_PCER0 = _BV(uart_id);

    /*
     * The selected UART channel is configured, and the baud rate is also
     * set to 9.6kbps.
     */
    USART0->US_CR = US_CR_RSTRX | US_CR_RSTTX |
    		US_CR_RXDIS | US_CR_TXDIS;

    /*
     * UART is configured in normal mode, 8 bits per transfer, no parity bit
     * and one stop bit (per transfer).
     */
    USART0->US_MR = US_MR_USART_MODE_NORMAL | US_MR_USCLKS_MCK |
    		US_MR_CHRL_8_BIT | US_MR_PAR_NO |
    		US_MR_NBSTOP_1_BIT;

    /*
     * The divisior to generate a baud rate of 9.6kbps is programmed in the
     * US_BRGR register.
     */
    USART0->US_BRGR = UART_BAUD_DIVISOR;

    /* The AIC is set up for the UART interrupts. */
//    NVIC_CONFIGURE(uart_id, AT91C_AIC_SRCTYPE_INT_POSITIVE_EDGE, irq_handler);

   	do {
    	    /* The interrupts for specified peripheral are first disabled. */
    		intr_disable(uart_id);
    	    /*
    	     * The edge at which the interrupt is to be triggered and handler for
    	     * the same is configured.
    	     */
    		PIOA->PIO_AIMER  = PIO_IT_AIME;
    		PIOA->PIO_REHLSR = PIO_IT_RE_OR_HL;
    		PIOA->PIO_ESR    = PIO_IT_EDGE;

    		intr_connectisr(uart_id, (void *)irq_handler, 0x40, 0);
    	    /* Pending interrupts if any for the peripheral are cleared. */
    		intr_ClearPending(uart_id);
    	} while (0);

    /* The receive complete interrupt is enabled for specified UART channel. */
    ENABLE_UART_0_RX_INT();

    /* The UART interrupt is enabled in AIC. */
    intr_enable(uart_id);

    /* Transmitter and receiver of the UART channel are enabled. */
    USART0->US_CR = US_CR_TXEN;
    USART0->US_CR = US_CR_RXEN;

    baud_rate = baud_rate;  /* Keep compiler happy. */
}

void sio_uart_1_init(uint32_t baud_rate)
{
    uint32_t uart_id;
    AT91PS_USART uart_ptr;
    uart_irq_handler_t irq_handler;

    /* ID of the PAL_UART1 peripheral. */
    uart_id = AT91C_ID_US1;

    /* Pointer to the PAL_UART1 base. */
    uart_ptr = AT91C_BASE_US1;

    /* Iinterrupt handler for PAL_UART1. */
    irq_handler = uart1_irq_handler;

    /*
     * The RXD1 and TXD1 pins on the PIO A are configured to be
     * controlled by on chip UART peripheral.
     */
    AT91C_BASE_PIOA->PIO_ASR = (PIN_UART_1_RXD | PIN_UART_1_TXD);
    AT91C_BASE_PIOA->PIO_PDR = (PIN_UART_1_RXD | PIN_UART_1_TXD);

    /* The clock for selected UART channel is enabled. */
    AT91C_BASE_PMC->PMC_PCER = _BV(uart_id);

    /*
     * The selected UART channel is configured, and the baud rate is also
     * set to 9.6kbps.
     */
    uart_ptr->US_CR = AT91C_US_RSTRX | AT91C_US_RSTTX |
                      AT91C_US_RXDIS | AT91C_US_TXDIS;

    /*
     * UART is configured in normal mode, 8 bits per transfer, no parity bit
     * and one stop bit (per transfer).
     */
    uart_ptr->US_MR = AT91C_US_USMODE_NORMAL | AT91C_US_CLKS_CLOCK |
                      AT91C_US_CHRL_8_BITS | AT91C_US_PAR_NONE |
                      AT91C_US_NBSTOP_1_BIT;

    /*
     * The divisior to generate a baud rate of 9.6kbps is programmed in the
     * US_BRGR register.
     */
    uart_ptr->US_BRGR = UART_BAUD_DIVISOR;

    /* The AIC is set up for the UART interrupts. */
    AIC_CONFIGURE(uart_id, AT91C_AIC_SRCTYPE_INT_POSITIVE_EDGE, irq_handler);

    /* The receive complete interrupt is enabled for specified UART channel. */
    ENABLE_UART_1_RX_INT();

    /* The UART interrupt is enabled in AIC. */
    AT91C_BASE_AIC->AIC_IECR = _BV(uart_id);

    /* Transmitter and receiver of the UART channel are enabled. */
    uart_ptr->US_CR = AT91C_US_TXEN;
    uart_ptr->US_CR = AT91C_US_RXEN;

    baud_rate = baud_rate;  /* Keep compiler happy. */
}
