==> edegiil/KNU_ioT_2019_Fall/ubinos/kernel/driver/lib_at86rf/src/PAL/AVR/Generic/Src/pal_uart.c <==
#include "../../../../../ubiconfig.h"
#include <stdint.h>
#include "../Inc/pal_uart.h"

void sio_uart_0_init(uint32_t baud_rate)
{
    /* Calculate corresponding value for baud rateregister. */
    uint16_t baud_rate_reg = UART_BAUD(baud_rate);

    /*
     * Microcontroller's USART register is updated to
     * run at the given baud rate.
     */
    UBRR0H = (baud_rate_reg >> 8) & 0xFF;
    UBRR0L = (uint8_t)baud_rate_reg;

    /* Faster async mode (UART clock divider = 8, instead of 16) */
    UCSR0A = (1 << U2X0);

    /*
     * Receiver and transmitter are enabled.
     * Receive and transmit interrrupt are enabled.
     */
    UCSR0B = (1 << RXEN0) | (1 << TXEN0) | \
             (1 << RXCIE0) | (1 << TXCIE0);

    /*
     * Boards specific initialization.
     */
    UART_0_INIT_NON_GENERIC();
}

void sio_uart_1_init(uint32_t baud_rate)
{
    /* Calculate corresponding value for baud rateregister. */
    uint16_t baud_rate_reg = UART_BAUD(baud_rate);

    /*
     * Microcontroller's USART register is updated to
     * run at the given baud rate.
     */
    UBRR1H = (baud_rate_reg >> 8) & 0xFF;
    UBRR1L = (uint8_t)baud_rate_reg;

    /* Faster async mode (UART clock divider = 8, instead of 16) */
    UCSR1A = (1 << U2X1);

    /*
     * Receiver and transmitter are enabled.
     * Receive and transmit interrrupt are enabled.
     */
    UCSR1B = (1 << RXEN1) | (1 << TXEN1) | \
             (1 << RXCIE1) | (1 << TXCIE1);

    /*
     * Boards specific initialization.
     */
    UART_1_INIT_NON_GENERIC();
}
